--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
         <h2 class="section-title">Hakkımızda</h2>
         <div class="about-grid">
             <div class="about-text">
-                <p>Ekim 2024'te Kartal'da atılan tohumlarla filizlenen <strong>Eagle Warriors</strong>, gençlerin sadece teknolojiyi tüketen değil, üreten bireyler olmasını hedefler. STEM eğitimi ile mühendislik disiplinini birleştirerek, geleceğin liderlerini yetiştiriyoruz.</p>
-                <p>FIRST Robotics Competition değerleri (Gracious Professionalism) ışığında; takım çalışmasını, yaratıcı problem çözmeyi ve inovasyonu yaygınlaştırmak. "Wings of Future" sloganıyla çıktığımız bu yolda, yerelden evrensele uzanan bir başarı hikayesi yazıyoruz.</p>
+                <p>Ekim 2024’te Kartal’da kurulan <strong>Eagle Warriors</strong>; 44 öğrenci ve 1 mentörden oluşan dinamik bir FRC takımıdır. Amacımız, gençleri teknolojiyi tüketen değil, üreten bireylere dönüştürerek STEM disipliniyle geleceğin liderlerini yetiştirmektir.</p>
+                <p>FIRST’ün Duyarlı Profesyonellik ve Birlikte Rekabet ilkelerini rehber edinerek; sadece robot inşa etmiyor, yaratıcı problem çözen ve inovasyonu yaygınlaştıran bir mühendislik kültürü oluşturuyoruz. Yerelde başlayan bu yolculuğu, evrensel bir başarı hikayesine dönüştürmek için sahadayız.</p>
             </div>
             <div class="photo-placeholder">
-                <img src="team.png" alt="Takım Fotoğrafı" onerror="this.style.display='none'; this.parentNode.innerText='[TAKIM FOTOĞRAFI YÜKLE]'">
+                <img src="team.jpg" alt="Takım Fotoğrafı" onerror="this.style.display='none'; this.parentNode.innerText='[TAKIM FOTOĞRAFI YÜKLE]'">
             </div>
         </div>
     </section>
@@ -183,14 +183,16 @@
             <div class="subteam-captain-area">
                 <i class="fas fa-user-circle" style="font-size: 2rem; color: var(--accent-blue);"></i>
                 <div>
-                    <div style="font-weight: bold; font-size: 1.1rem;">Kaptan Adı</div>
+                    <div style="font-weight: bold; font-size: 1.1rem;">Metehan Temel</div>
                     <span class="captain-badge">Mekanik Kaptanı</span>
                 </div>
             </div>
             <div class="subteam-members">
                 <ul class="member-list">
-                    <li>Üye İsim</li> <li>Üye İsim</li> <li>Üye İsim</li> <li>Üye İsim</li>
-                    <li>Üye İsim</li> <li>Üye İsim</li> <li>Üye İsim</li> <li>Üye İsim</li>
+                    <li>Bora Kaya</li> <li>Yaman Ceylan</li> <li>Beril Zenan Uğurlu</li> <li>Azra Nur Akçin</li>
+                    <li>Ada Yüksel</li> <li>Eflal Yılmaz</li> <li>Kıvanç Gökçebuzhan</li> <li>Ali Turgut Keleş</li>
+                    <li>Emirtan Karaca</li> <li>Aras Emir Ocak</li> <li>Buğra Tunç</li> <li>Kürşat Mert Hasdemir</li>
+                    <li>Toprak Sarak</li> <li>Doruk Uçar</li> <li>Mehmet Tuna Halifeoğlu</li> <li>Arda Çetin</li>
                 </ul>
             </div>
         </div>
@@ -203,14 +205,15 @@
             <div class="subteam-captain-area">
                 <i class="fas fa-user-circle" style="font-size: 2rem; color: var(--accent-blue);"></i>
                 <div>
-                    <div style="font-weight: bold; font-size: 1.1rem;">Kaptan Adı</div>
+                    <div style="font-weight: bold; font-size: 1.1rem;">Furkan Efe Aktaş</div>
                     <span class="captain-badge">Yazılım Kaptanı</span>
                 </div>
             </div>
             <div class="subteam-members">
                 <ul class="member-list">
-                    <li>Üye İsim</li> <li>Üye İsim</li> <li>Üye İsim</li> <li>Üye İsim</li>
-                    <li>Üye İsim</li> <li>Üye İsim</li>
+                    <li>Arda Ok</li> <li>Bilgin Utku Bayram</li> <li>Defne Derin Yılmaz</li> <li>Eren Kürekçi</li>
+                    <li>Ömer Faruk Soylu</li> <li>Yılmaz Haktan Erkan</li> <li>Poyraz Karamanlı</li> <li>Ertuğrul Gazi Kaya</li>
+                    <li>Yağız Aybars Öztürk</li> <li>Ömer Serhan Pak</li>
                 </ul>
             </div>
         </div>
@@ -223,13 +226,13 @@
             <div class="subteam-captain-area">
                 <i class="fas fa-user-circle" style="font-size: 2rem; color: var(--accent-blue);"></i>
                 <div>
-                    <div style="font-weight: bold; font-size: 1.1rem;">Kaptan Adı</div>
+                    <div style="font-weight: bold; font-size: 1.1rem;">Aydın Can Arıcan</div>
                     <span class="captain-badge">Elektronik Kaptanı</span>
                 </div>
             </div>
             <div class="subteam-members">
                 <ul class="member-list">
-                    <li>Üye İsim</li> <li>Üye İsim</li> <li>Üye İsim</li> <li>Üye İsim</li>
+                    <li>Emre Özgül</li> <li>Aras Akgül</li> <li>Ali Kızıl</li> <li>Poyraz Ercan</li> <li>Kerem Üstüner</li>
                 </ul>
             </div>
         </div>
@@ -242,13 +245,14 @@
             <div class="subteam-captain-area">
                 <i class="fas fa-user-circle" style="font-size: 2rem; color: var(--accent-blue);"></i>
                 <div>
-                    <div style="font-weight: bold; font-size: 1.1rem;">Kaptan Adı</div>
+                    <div style="font-weight: bold; font-size: 1.1rem;">Kutay Şimşek</div>
                     <span class="captain-badge">PR Kaptanı</span>
                 </div>
             </div>
             <div class="subteam-members">
                 <ul class="member-list">
-                    <li>Üye İsim</li> <li>Üye İsim</li> <li>Üye İsim</li> <li>Üye İsim</li>
+                    <li>Ayşe Naz Özgül</li> <li>Ayşe Naz Yerlioğlu</li> <li>Caner Budulğan</li> <li>Gamze Sudem Ağgez</li> 
+                    <li>Aras Bozyiğit</li> <li>Eylül Ece uğurlu</li> <li>Ali Tekin</li>
                 </ul>
             </div>
         </div>
@@ -259,9 +263,13 @@
     <section id="sponsors" style="background: var(--bg-card);">
         <h2 class="section-title">Sponsorlarımız</h2>
         <div class="sponsors-flex">
-            <div class="sponsor-box">LOGO 1</div>
-            <div class="sponsor-box">LOGO 2</div>
-            <div class="sponsor-box">LOGO 3</div>
+            <div class="sponsor-box"><img src="gorgonx.jpeg" alt=""></div>
+            <div class="sponsor-box"><img src="boeing.jpeg" alt=""></div>
+            <div class="sponsor-box"><img src="fyf.jpeg" alt=""></div>
+            <div class="sponsor-box"><img src="volga.jpeg" alt=""></div>
+            <div class="sponsor-box"><img src="rekorboya.jpeg" alt=""></div>
+            <div class="sponsor-box"><img src="kzl.jpeg" alt=""></div>
+            <div class="sponsor-box"><img src="steel.jpeg" alt=""></div>
         </div>
     </section>
 
@@ -276,7 +284,7 @@
                 <i class="fas fa-map-marker-alt"></i> Yunus, Sanayi Cd. no:2, 34873 Kartal/İstanbul
             </p>
             <p style="color: var(--text-muted); margin-bottom: 20px;">
-                <i class="fas fa-envelope"></i> iletisim@eaglewarriors.com
+                <i class="fas fa-envelope"></i> iletisim@team10542.com
             </p>
 
             <div class="social-icons">
