--- a/index.html
+++ b/index.html
@@ -263,13 +263,13 @@
     <section id="sponsors" style="background: var(--bg-card);">
         <h2 class="section-title">Sponsorlarımız</h2>
         <div class="sponsors-flex">
-            <div class="sponsor-box"><img src="gorgonx.jpeg" alt=""></div>
-            <div class="sponsor-box"><img src="boeing.jpeg" alt=""></div>
-            <div class="sponsor-box"><img src="fyf.jpeg" alt=""></div>
-            <div class="sponsor-box"><img src="volga.jpeg" alt=""></div>
-            <div class="sponsor-box"><img src="rekorboya.jpeg" alt=""></div>
-            <div class="sponsor-box"><img src="kzl.jpeg" alt=""></div>
-            <div class="sponsor-box"><img src="steel.jpeg" alt=""></div>
+            <div class="sponsor-box"><img src="gorgonx.png" alt=""></div>
+            <div class="sponsor-box"><img src="boeing.png" alt=""></div>
+            <div class="sponsor-box"><img src="fyf.png" alt=""></div>
+            <div class="sponsor-box"><img src="volga.png" alt=""></div>
+            <div class="sponsor-box"><img src="rekorboya.png" alt=""></div>
+            <div class="sponsor-box"><img src="kzl.png" alt=""></div>
+            <div class="sponsor-box"><img src="steel.png" alt=""></div>
         </div>
     </section>
 
@@ -284,13 +284,12 @@
                 <i class="fas fa-map-marker-alt"></i> Yunus, Sanayi Cd. no:2, 34873 Kartal/İstanbul
             </p>
             <p style="color: var(--text-muted); margin-bottom: 20px;">
-                <i class="fas fa-envelope"></i> iletisim@team10542.com
+                <i class="fas fa-envelope"></i> contact@team10542.com
             </p>
 
             <div class="social-icons">
                 <a href="https://instagram.com/eaglewarriorstm" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
+                <a href="https://www.linkedin.com/company/team10542/"><i class="fab fa-linkedin"></i></a>
                 <a href="#"><i class="fab fa-github"></i></a>
             </div>
             
